<resources>
    <string name="app_name">Masakanaku</string>
    <string name="actionsign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="resep">
        Bahan Utama :\n
-Nasi putih 700 gr\n
-Blue Band 3 sdm\n
-Udang kecil kupas 100 gr\n
-Cumi, kupas kulit arinya, potong bulat 100 gr,\n
-Bakso ikan, potong 4 butir\n
-Saus tiram 1 sdm\n
-Kecap asin 1 sdm\n
-Garam 1/2 sdt\n
-Lada 1/2 sdt\n
-Minyak wijen 1 sdt\n
-Daun bawang, potong 1/2 cm 2 tangkai\n
-Telur, kocok lepas 2 butir,\n
-Bawang putih, cincang 4 siung\n
    </string>
    <string name="penyajian">
        1. Panaskan Blue Band, tumis bawang putih hingga harum lalu tambahkan udang dan cumi, tumis hingga berubah warna\n
        2. Tambahkan bakso ikan dan telur, masak hingga telur berbulir dan matang.\n
        3. Tambahkan saus tiram, lada, kecap asin garam dan daun bawang.\n
        4. Masukkan nasi putih, masak hingga rata betul lalu terakhir masukkan minyak wijen.
    </string>
    <string name="resepcumi">
        Bahan Utama :\n\n

        -12 ekor cumi segar berukuran sedang, dipotong dengan bentuk cincin\n
        -1/4 cangkir tepung terigu\n
        -1 sdt garam\n
        -1 sdt oregano bubuk\n
        -1/2 sdt bubuk lada hitam\n
        -1 buah lemon, dipotong berbentuk wedges untuk garnish\n
        -Minyak goreng\n
    </string>
    <string name="penyajiancumi">
        1.Panaskan minyak goreng di dalam wajan.\n
        2.Sembari menunggu minyak panas, campurkan tepung terigu, garam, oregano bubuk, dan bubuk lada hitam dalam sebuah wadah.\n
        3.Balurkan cumi yang sudah dipotong ke dalam adonan tepung.\n
        4.Goreng cumi selama 2-3 menit saja atau sampai warnanya berubah keemasan, jangan menggoreng terlalu lama agar cumi tidak alot.\n
        5.Angkat cumi dan tiriskan minyaknya.\n
        6.Sajikan cumi goreng tepung bersama irisan lemon.\n

    </string>
    <string name="tipscumi">
        Berikut adalah tips yang harus kamu lakukan agar tekstur daging cumi terasa empuk dan tidak alot :\n\n

        1. Rebus dan Rendam Cumi, Cara yang satu ini bisa kamu lakukan sebelum menumis atau menggoreng cumi-cumi. Pertama, rebuslah cumi di dalam air sebentar. Ketika air mendidih, segera angkat dan rendam cumi di dalam air dingin.\n
        2. Rendam dalam Baking Soda, Nah cara ini juga cukup efektif untuk membuat tekstur daging cumi menjadi lebih empuk. Kamu hanya perlu menyiapkan satu baskom kecil air, lalu tambahkan satu sendok makan baking soda ke dalam baskom tersebut. Masukkan cumi dan diamkan di dalam lemari es selama semalaman.\n
        3. Rendam Dalam Susu Sapi Segar, Susu sapi juga bisa membuat daging cumi terasa lebih empuk, lho. Pastikan kamu menggunakan susu sapi segar untuk merendam cumi. Kamu membutuhkan waktu seharian untuk merendam cumi di dalam susu. Pastikan wadah berisi rendaman cumi ini tertutup rapat agar tidak tercemar. Selain itu, kamu juga bisa memasukkan wadah yang berisi susu dan cumi ini ke dalam lemari es.\n
        4. Persingkat Waktu Memasak, Proses memasak yang terlalu lama dapat membuat daging cumi berubah menjadi alot. Sebaiknya, ketika masakan cumi sudah matang, segera angkat dari wajan. Pindahkan ke wadah yang lebih dingin untuk menghentikan proses memasak.\n


  Selain itu, kesegaran cumi pada saat beli juga sangat berpengaruh dalam menentukan keras atau tidaknya daging cumi tersebut. Agar daging lebih empuk setelah dimasak, belilah cumi segar dengan ukuran yang tidak terlalu besar.\n
    </string>
    <string name="resepudang">
        Bahan Utama :\n\n

        1. Udang windu atau sesuai selera, dibersihkan\n
        2. Minyak goreng atau margarin secukupnya, untuk menumis\n
        3. Garam, secukupnya\n
        4. Gula, secukupnya\n
        5. Penyedap rasa, secukupnya\n
        6. Saus bangkok (opsional bila suka)\n
        7. 5 butir Bawang merah\n
        8. 3 butir Bawang putih\n
        9. 1 buah Bawang bombay, cincang halus\n
        10. 1 buah Tomat, cincang\n
        11. 5 buah Cabe merah, sesuai selera\n
        12. 1 sdt air asam\n
    </string>
    <string name="penyajianudang">

        1. Haluskan bawang merah, bawang putih, tomat dan cabai merah.\n
        2. Panaskan minyak goreng atau mentega, masukkan udang dan oseng hingga berwarna kemerahan.\n
        3. Masukkan bawang bombay, oseng sebentar lalu tambahkan bumbu yang sudah dihaluskan.\n
        4. Tambahkan air asam, garam, gula, penyedap rasa dan saus bangkok secukupnya, aduk sampai rata. Jika dirasa bumbu sudah pas, matikan api, angkat dan sajikan.\n
    </string>
    <string name="tipsudang">

        1. Pilihlah udang yang segar dengan cara pegang badan udang, jika badan udang masih terasa keras artinya keadaan udang masih bagus atau segar.\n
        2. Saat memasak udang kulit udang bisa di kupas dulu ato tidak, itu semua tegantung selera sobat onliners. Tapi biasanya udang akan terasa lebih gurih jika dimasak menggunakan kulitnya. Karena di dalam kulit udang mengandung antibodi. Jadi jika sobat onliners cenderung alergi ama udang, lebih baik makan bersama kulitnya. Karena biasanya bisa menjadi penawarnya. Karena berdasarkan penelitian chitosan, “kulit udang” dapat mengobati berbagai penyakit termasuk hipertensi dan diabetes militus. Itulah beberapa khasiat dan fungsi udang yang ternyata sangat baik untuk kesehatan. Tapi buat sobat onliners yang mempunyai kolesterol tinggi, sebaiknya agak dikurangi ya memakan udang atau seafood.
    </string>
    <string name="resepayamadu">
        Bahan Utama :\n\n

        1. 500 gram ayam\n
        2. 1 buah jeruk nipis\n
        3. 2 lembar daun jeruk\n
        4. 2 lembar daun salam\n
        5. 2 sdm saus tiram\n
        6. 3 sdm madu\n
        7. 2 sdm kecap manis\n
        8. 1 sdm gula merah (sisir)\n
        9. 1 sdt garam/secukupnya\n
        10. 1 sdt kaldu non MSG (kaldu jamur)\n
        11. 2 sdm air asam jawa\n
        12. 30 ml santan instan (santan kara 1/2 sachet)\n
        13. secukupnya minyak (untuk menumis)\n\n
 Bumbu Halus :\n\n
4 siung bawang putih\n
6 siung bawang merah\n
1/4 sdt merica bubuk\n
1/4 sdt jahe bubuk\n
1/2 sdm ketumbar bubuk\n
    </string>
    <string name="penyajianayammadu">

    1. Potong ayam menjadi beberapa bagian. Baluri dengan jeruk nipis, biarkan beberapa menit lalu cuci.\n\n
    2. Panaskan minyak/margarin, tumis bumbu halus. Masukkan daun jeruk dan daun salam, tumis hingga harum.\n\n
    3. Masukkan ayam, aduk-aduk.\n\n
    4. Tambahkan air, santan, saus tiram, madu, gula merah, kecap, garam, kaldu bubuk dan air asam jawa. Aduk merata, lalu tes rasa.\n\n
    5. Masak hingga air menyusut dan bumbu meresap (jangan terlalu kering, sisakan sedikit bumbu untuk olesan saat membakar ayam)\n\n
    6. Bakar ayam. Sesekali balik dan olesi dengan bumbu.\n\n
    7. Angkat dan sajikan dengan sambal dan lalapan.\n\n
</string>
    <string name="resepbetutu">
        Bahan Utama :\n\n
        1. Kemiri kurang lebih sebanyak 4 pcs. Disangrai terlebih dahulu sebelum dihaluskan supaya lebih wangi.\n\n
        2. Bawang putih ukuran sedang besar kurang lebih sebanyak 3 siung saja.\n\n
        3. Bawang merah ukuran sedang besar kurang lebih sebanyak 6 siung saja.\n\n
        4. Terasi kualitas bagus yang sudah dibakar sebentar kurang lebih sebanyak 1 sendok kecil saja.\n\n
        5. Kunyit ukuran sedang besar kurang lebih sebanyak 2 ruas jari orang dewasa saja. Sebaiknya kunyitnya dibakar sebentar sebelum dihaluskan.\n\n
        6. Ketumbar yang sudah disangrai sebelumnya kurang lebih sebanyak 1 sendok makan saja.\n\n
        7. Pala halus atau bubuk sedikit saja atau kurang lebih sebanyak 0.5 sendok kecil saja.\n\n
        8. Kencur ukuran kecil kurang lebih sebanyak 3 pc saja atau kurang lebih 1 pcs saja kalau ukurannya cukup besar.\n\n
        9. Lada halus secukupnya sesuai selera atau kurang lebih sebanyak 1 sendok kecil saja.\n\n
        10. Buah cabai merah secukupnya sesuai selera.\n\n
        11. Buah cabai rawit merah secukupnya sesuai selera.\n\n


    </string>
    <string name="resepterongbalado">
Bahan:\n
1.4 bh terong ungu\n\n

Bumbu Halus:\n
1.6 siung bawang merah\n
2.4 siung bawang putih\n
3.5 cabe keriting (kurangi jika ingin tidak terlalu pedas)\n
4.10 cabai merah besar\n
5.2 bh tomat\n
6.Garam dan gula secukupnya\n
    </string>
    <string name="penyajianterongbalado">
        Cara Membuat:\n
1.Iris terong ungu masing-masing menjadi 4 bagian kira-kira 10cm, tiap bagian potong memanjang menjadi empat bagian.\n
2.Rendam irisan terong ke dalam air agar terong tidak berubah warna. Kemudian di goreng hingga matang.\n
3.Kupas bawang merah dan bawang putih. Siapkan cabai keriting, cabai merah besar, dan tomat. Ulek sampai halus kemudian tambahkan gula dan garam sesuai selera\n
4.Setelah bumbu halus dan terong sudah matang, tumis bumbu dengan minyak yang sudah dipanaskan hingga wangi. Kemudian masukan terong dan aduk hingga merata.\n


    </string>
</resources>