<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.customer.myapplication.balado">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6ab954"
            android:gravity="center"
            android:text="Resep"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/gambar"
            android:src="@drawable/terongbalado"
            android:layout_height="239dp"
            android:layout_margin="1dp" />
        <TextView
            android:id="@+id/bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/resepterongbalado"
            tools:ignore="InvalidId" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cara Penyajian"
            android:background="#6ab954"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cook"
            android:padding="8dp"
            android:layout_weight="0.20" />

        <TextView
            android:id="@+id/penyajian"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/penyajianterongbalado"
            android:textSize="18dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#D50000"
            android:gravity="center"
            android:text="Tips dan Trik"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cook"
            android:padding="8dp"
            android:layout_weight="0.20" />
        <TextView
            android:id="@+id/tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tipsudang"
            android:textSize="18dp"
            android:textStyle="bold" />





    </LinearLayout>

</ScrollView>
