<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.customer.myapplication.Udangasamanis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6ab954"
            android:gravity="center"
            android:text="Resep"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:layout_margin="1dp"
            app:srcCompat="@drawable/udang" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resepudang"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#6ab954"
            android:gravity="center"
            android:text="Cara Penyajian"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:padding="8dp"
            android:src="@drawable/cook" />

        <TextView
            android:id="@+id/txtpenyajiaudang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/penyajianudang"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#D50000"
            android:gravity="center"
            android:text="Tips dan Trik"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cook"
            android:padding="8dp"
            android:layout_weight="0.20" />
        <TextView
            android:id="@+id/txttipsudang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/tipsudang"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tutorial"
            android:background="#ff0000"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/yutublogo"/>


        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnOpenBrowser2"
            android:layout_height="wrap_content"
            android:text="Tonton"
            android:layout_gravity="center"/>




    </LinearLayout>

</ScrollView>
